--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,7 +23,7 @@
             <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
             {%- endif -%}
           {%- endfor -%}
-          <a href="{{ '/assets/StormentResume.pdf' | relative_url }}" target="_blank" rel="noopener">Resume</a>
+          <a class="page-link" href="{{ '/assets/StormentResume.pdf' | relative_url }}" target="_blank" rel="noopener">Resume</a>
         </div>
       </nav>
     {%- endif -%}
